// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTA renders correctly for membership purchase 1`] = `
<div
  className="mt-8 btn-wrapper"
>
  <a
    className="btn text-white bg-primary-500 text-lg btn-lg"
    href="/"
    text="Purchase Membership"
  >
    Purchase Membership
  </a>
</div>
`;

exports[`CTA renders correctly for one-time purchase 1`] = `
<div
  className="mt-8 btn-wrapper"
>
  <a
    className="btn text-white bg-primary-500 text-lg btn-lg"
    href="/"
    text="Purchase Course"
  >
    Purchase Course
  </a>
</div>
`;
